# Rust-Wallet

./: .gitignore  README.md  docker-compose.yml  ideas.txt
Kubernetes/: api-deployment.yml
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/2023-11-07-152002_users/: up.sql
backend/migrations/2023-11-13-211752_users/: down.sql  up.sql
backend/migrations/2023-11-13-213850_users/: up.sql
backend/requests/: checkEmailExists.http  checkPassword.http  createNewUser.http  getBalance.http  root.http  sendTransaction.http  unseal_vault.py  vault_get_secret.py  vault_put_secret.py  vault_secret.http  vault_secret.py
backend/src/: example.http  keygen.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs  walgen.rs  web_methods.rs
data/base/1/: 1259  2619  2696  2840  2841
data/base/16384/: 1247  1247_fsm  1249  1259  1259_fsm  16385  16386  16392  2224  2579  (+28 more)
data/global/: 1260  1262  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
db/: Dockerfile  docker-compose.yml  prueba.sql  up.sql
db/data/: postmaster.pid
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  shims-vuex.d.ts  store.ts
kubernetes/: api-deployment.yml  cluster-ip-api.yml  cluster-ip-db.yml  cluster-ip-frontend.yml  cluster-ip-vault.yml  db-deployment.yml  frontend-deployment.yml  ingress.yml  lb.yml  load-balancer.yml  pv-db.yml  pv-vault.yml  pvc-db.yml  pvc-vault.yml  vault-deployment.yml
nginx/: Dockerfile  nginx.conf  wait-for-backend.sh
vault/: Dockerfile  api.hcl  config.json  docker-compose.yml  unseal_vault.sh  vault-init.sh
vault/vaultconfig/: keys.txt
(+63 files in other folders)
