[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bdk = "0.29.0"
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
r2d2 = "0.8.9"
rocket = "0.5.0"

[dependencies.rocket_contrib]
version = "0.5.0"
default-features = false
features = ["json"]
