[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.75"
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive = "0.1.7"
tokio = "1.33.0"
web3 = "0.19.0"
secp256k1 = { version = "0.28.0", features = ["rand"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
rand = "0.8.5"
actix-cors = "0.6.4"
sha2 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.2.1"

